Cahnge add blueprint metadata process in the client